@@ -20,6 +20,7 @@
 - Fix: [#20417] Plugin/custom windows are missing the left border in the title bar.
 - Fix: [#20429] Error window tooltip not closing after 8 seconds.
 - Fix: [#20364] Adding too much money with cheats causes an overflow.
+- Fix: [#20365] Money cheat input does not support negative values.
 
 0.4.5 (2023-05-08)
 ------------------------------------------------------------------------
